# SegAlign

./: CMakeLists.txt  spack.yaml
common/: gpu.h  gpu_utils.h  parameters.h  seed_filter_interface.cu  seed_pos_table.cu
repeat_masker_src/: CMakeLists.txt  main.cpp  seed_filter.cu
scripts/: install_noether_mi210.sh  install_oram_v100.sh  install_setonix_mi250x.sh  setonix_test1.sh  setonix_test1_c2gpu1.sh  setonix_test2.sh  test1.sh  test2.sh
src/: CMakeLists.txt  main.cpp  seed_filter.cu  segment_printer.cpp
